fix: 修改按紐gap

--- a/assets/scss/pages/_product-detail.scss
+++ b/assets/scss/pages/_product-detail.scss
@@ -32,9 +32,6 @@
 .btn-product-size:hover {
   border-color: $neutral-900;
 }
-.product-action {
-  gap: 8px;
-}
 
 .product-action .btn {
   width: 50%;
